# minecraft-texture-rotations

./: .gitignore  Cargo.toml  build.rs  config.toml.sample  extras.c  extras.h  wrapper.h
.cargo/: config
src/: cubiomes.rs  main.rs  placement.rs  rotation_info.rs  texture_finder.rs
src/texture_provider/: mod.rs  sodium.rs  sodium19.rs  vanilla.rs
