[package]
name = "minecraft-texture-rotations"
version = "0.3.0"
edition = "2021"
authors = [ "EnderKill98" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
core_affinity = "0.5.10"
serde = { version = "1.0.145", features = [ "derive" ] }
toml = "0.5.9"
clap = { version = "4.0.15", features = [ "derive" ] }

[build-dependencies]
cc = "1.0"
bindgen = "0.60.1"

# TODO: Test whether this improves performance
#[profile.release]
#lto = "thin"
#codegen-units = 1
